--- a/client/package.json
+++ b/client/package.json
@@ -4,13 +4,14 @@
   "proxy": "http://localhost:3030/",
   "private": true,
   "dependencies": {
+    "15": "0.0.0",
     "google-maps-react": "^1.1.2",
     "jquery": "^3.3.1",
-    "react": "^16.2.0",
+    "react": "^15.6.2",
     "react-bootstrap": "^0.32.1",
-    "react-dom": "^16.2.0",
+    "react-dom": "^15.6.2",
     "react-google-maps": "^9.4.5",
-    "react-scripts": "1.1.1"
+    "react-scripts": "^1.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
