--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,7 @@
     "react-bootstrap": "^0.32.1",
     "react-dom": "^15.6.2",
     "react-google-maps": "^9.4.5",
-    "react-scripts": "^1.1.5"
+    "react-scripts": "2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
